	* events/mips/r12000/events:
	* events/mips/r12000/unit_masks:
	* events/mips/r5432/events:
	* events/mips/r5432/unit_masks:
	* events/mips/r5500/events:
	* events/mips/r5500/unit_masks:
	* events/mips/rm7000/events:
	* events/mips/rm7000/unit_masks:
	* events/mips/rm9000/events:
	* events/mips/rm9000/unit_masks:
	* events/mips/sb1/events:
	* events/mips/sb1/unit_masks:
	* events/Makefile.am:
	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c: Add support for the MIPS R10000 and R12000,
	  QED RM7000 and PMC-Sierra RM9000, NEC VR5432 and VR5500 and Sibyte SB1
	   processors.

	* README: List myself as the caretaker of the MIPS bits.

2004-11-25  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events.c: simplify a bit get_mapping()

2004-11-20  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_stats.c: some statistics are useless, don't print them
	  if we can't read the oprofilefs files.

2004-11-20  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sfile.c: sfile_clear_kenel() : clear also callgraph
	  file depending on module.

2004-11-19  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sfile.h:
	* daemon/opd_sfile.c: fix #971487, daemon was unable to retrieve
	  correctly callgraph sample file for kernel space samples. Fixed by
	  adding relevant information to cg_hash_entry.

	* libpp/callgraph_container.cpp: more verbosity

2004-11-19  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: Fix AMD link (noticed by Emmanuel Araman).

2004-11-18  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opgprof.cpp: ensure we load all callgraph file

2004-11-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/locate_images.cpp: ensure error is always set,
	  callgraph_container was using an uninitialized value.

2004-11-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: improve a bit the symbol chosen when
	  multiple symbol live at same vma

2004-11-17  Philippe Elie  <phil.el@wanadoo.fr>
